--- a/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
+++ b/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
@@ -30,59 +30,83 @@
 							<h4 class="modal-title">Voulez-vous enregistrer un nouvel agent avec les informations suivantes ?</h4>
 						</div>
 						<div class="modal-body">
-							<div class="list-group">
-								<li class="list-group-item">Nom 
-									<span class="badge" id="confirmNom">Badge</span>
-								</li>
-								<li class="list-group-item">Prénom 
-									<span class="badge" id="confirmPrenom">Badge</span>
-								</li>
-								
-								<li class="list-group-item">Sexe 
-									<span class="badge" id="confirmSexe">Badge</span>
-								</li>
-								
-								<li class="list-group-item">Date de naissance 
-									<span class="badge" id="confirmDateNaissance">Badge</span>
-								</li>
+							<table class="table table-striped confirmation-table ">
+								<tbody>
+									<tr>
+										<th class="text-success" style="height: 50px;">Nom : </th> <th class="value"><span id="confirmNom">Badge</span></th>
+										<th style="width: 100px;"></th>
+										<th class="text-success" style="height: 50px;">Prenom :</th> <th><span class="value" id="confirmPrenom">Badge</span></th>
+										
+									</tr>
 
-								<li  class="list-group-item">Lieu de naissance 
-									<span class="badge" id="confirmLieuNaissance">Badge</span>
-								</li>
+									<tr>
+										<th class="text-success" style="height: 50px;">Lieu de naissance :</th> <th><span id="confirmLieuNaissance">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">Date de naissance : </th> <th><span id="confirmDateNaissance">Badge</span></th>
+									</tr>
 
-								<li class="list-group-item">Email 
-									<span class="badge" id="confirmEmail">Badge</span>
-								</li>
-								
+									<tr>
+										<th class="text-success" style="height: 50px;">Email : </th> <th class="value"><span id="confirmEmail">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">Téléphone : </th> <th class="value"><span id="confirmTel">Badge</span></th>
+										
+									</tr>
 
-								
-								
+									<tr>
+										<th class="text-success" style="height: 50px;">Type de Pièce : </th> <th class="value"><span id="confirmTypePiece">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">N° de pièce : </th> <th class="value"><span id="confirmNumPiece">Badge</span></th>
+										
+									</tr>
+
+									<tr>
+										<th class="text-success" style="height: 50px;">Nom du père : </th> <th class="value"><span id="confirmNomPere">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">Nom de la mère : </th> <th class="value"><span id="confirmNomMere">Badge</span></th>
+										
+									</tr>
+
+									<tr>
+										<th class="text-success" style="height: 50px;">Matricule : </th> <th class="value"><span id="confirmMatricule">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">Fonction : </th> <th class="value"><span id="confirmFonction">Badge</span></th>
+									</tr>
+
+									<tr>
+										<th class="text-success" style="height: 50px;">Emploi : </th> <th class="value"><span id="confirmMatricule">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">Grade : </th> <th class="value"><span id="confirmFonction">Badge</span></th>
+									</tr>
+
+									<tr>
+										<th class="text-success" style="height: 50px;">Matricule : </th> <th class="value"><span id="confirmEmploi">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">Fonction : </th> <th class="value"><span id="confirmGrade">Badge</span></th>
+									</tr>
+
+									<tr>
+										<th class="text-success" style="height: 50px;">Fixe de bureau : </th> <th class="value"><span id="confirmFixeBureau">Badge</span></th>
+										<th style="width: 60px;"></th>
+										<th class="text-success" style="height: 50px;">Première prise de service : </th> <th class="value"><span id="confirmDatePriseService1">Badge</span></th>
+									</tr>
+									
+								</tbody>
+							</table>
+
 								<!-- 				====================================================================				--- -->
 								
 								
-								<li class="list-group-item">Téléphone <span class="badge" id="confirmTel">Badge</span></li>
-								<li  class="list-group-item">Type de Pièce <span class="badge" id="confirmTypePiece">Badge</span></li>
-								<li  class="list-group-item">N° de pièce <span class="badge" id="confirmNumPiece">Badge</span></li>
-
-								<li class="list-group-item">Nom du père <span class="badge" id="confirmNomPere">Badge</span></li>
-								<li class="list-group-item">Nom de la mère <span class="badge" id="confirmNomMere">Badge</span></li>
 								
 								
-								<li class="list-group-item">Fixe de bureau <span class="badge" id="confirmFixeBureau">Badge</span></li>
-
-								<li class="list-group-item">Matricule <span class="badge" id="confirmMatricule">Badge</span></li>
-								<li class="list-group-item">Fonction <span class="badge" id="confirmFonction">Badge</span></li>
-								<li class="list-group-item">Emploi <span class="badge" id="confirmEmploi">Badge</span></li>
-								<li class="list-group-item">Grade <span class="badge" id="confirmGrade">Badge</span></li>
-								<li class="list-group-item">Première prise de service <span class="badge" id="confirmDatePriseService1">Badge</span></li>																
+								
 															
-							</div>
+							
 							
 							
 						</div>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-							<button type="submit" id="btn-submit-modal" class="btn btn-success">Save changes</button>
+							<button type="button" class="btn btn-lg btn-default" data-dismiss="modal">Close</button>
+							<button type="submit" id="btn-submit-modal" class="btn btn-lg btn-success">Confirmer</button>
 						</div>
 					</div>
 				</div>
