--- a/src/main/resources/templates/unite-admin/frm-update-unite-admin.html
+++ b/src/main/resources/templates/unite-admin/frm-update-unite-admin.html
@@ -68,24 +68,34 @@
 
 <body>
     <div layout:fragment="content">
-        <div class="container-fluid">
-			<div class="col-md-offset-1 col-md-10">
-				<div class="panel panel-default">
-					<div class="panel-heading" th:text="${'Modification dun(e) '+ uniteAdmin.typeUniteAdmin.nomTypeUniteAdmin}"> Modification</div>
-					<div class="panel-body">
-						
-						<form id="unite-admin-updateForm" th:action="@{/staffadmin/unites-admins/update}" th:object="${uniteAdmin}" method="post">
-							<input type="hidden" th:field="*{idUniteAdmin}"/>
-							<th:block th:replace="unite-admin/frm-unite-admin-frag.html::input-frm-unite-admin-frag"></th:block>
-							
-							<button type="button" id="btn-submit-update" class="btn btn-lg btn-warning pull-right">Enregistrer les modifications</button>
-							
-							<th:block th:replace="unite-admin/frm-unite-submit-confirmation-dialog.html::frm-unite-submit-confirmation-dialog"></th:block>
-						</form>
+        <div class="main-content-block-item">
+			<div class="col-md-12">
 
+				<div th:if="${globalErrorMsg}">
+					<div class="alert alert-danger">
+						<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+						<strong>Erreur!</strong> 
+						<span th:text="${globalErrorMsg}"></span>
 					</div>
-
 				</div>
+
+				<th:block th:if="${uniteAdmin}">
+					<div class="panel panel-default">
+					
+						<div class="panel-heading" > Modification d'un(e) <span th:text="${uniteAdmin.typeUniteAdmin.nomTypeUniteAdmin}"></span></div>
+						<div class="panel-body">
+							
+							<form id="unite-admin-updateForm" th:action="@{/staffadmin/unites-admins/update}" th:object="${uniteAdmin}" method="post">
+								<input type="hidden" th:field="*{idUniteAdmin}"/>
+								<th:block th:replace="unite-admin/frm-unite-admin-frag.html::input-frm-unite-admin-frag"></th:block>
+									
+								<button type="button" id="btn-submit-update" class="btn btn-lg btn-warning pull-right">Enregistrer les modifications</button>
+									
+								<th:block th:replace="unite-admin/frm-unite-submit-confirmation-dialog.html::frm-unite-submit-confirmation-dialog"></th:block>
+							</form>
+						</div>
+					</div>
+				</th:block>
 				
 			</div>
 			
