--- a/src/main/resources/templates/user/summary-card-frag.html
+++ b/src/main/resources/templates/user/summary-card-frag.html
@@ -44,6 +44,14 @@
 						</p>
 					</div>
 				</div> 
+				
+				<div class="col-md-12" style="align-content: center; align-items: center; text-align: center;">
+					<p>
+						<a th:href="@{'/staffadmin/frm-agent?idAgent=' + ${visitedUser.agent.idAgent}}" class="btn btn-theme" ><i class="fa fa-edit"></i> Modifier</a>
+						<a th:href="@{'/staffadmin/affectations/'+${visitedUser.agent.idAgent}}" class="btn btn-theme"><i class="glyphicon glyphicon-send"></i> Affecter</a>
+						<a th:href="@{/staffadmin/nominations/form(idAgent=${visitedUser.agent.idAgent})}" class="btn btn-theme"><i class="fa fa-bullhorn"></i> Nommer à un post</a>
+					</p>
+				</div>				
 				<!-- /col-md-4 -->
 			</div>
 			    			
