--- a/src/main/resources/templates/unite-admin/list-services-rattaches-frag.html
+++ b/src/main/resources/templates/unite-admin/list-services-rattaches-frag.html
@@ -11,33 +11,34 @@
             <div  id="sces-rattaches" class="panel-collapse collapse">
                 <div th:each="sr:${scesRattaches}" class="panel panel-success ml-20" style="font-size: 10px; height: 35px;">
                 	<div class="panel-heading" >
-						<span th:text="${sr.appellation + ' (' + sr.sigle + ')'}" class="sub-admin-3"></span>
-						
+						<a th:href="@{'/staffadmin/unites-admins/' + ${sr.idUniteAdmin}}">
+							<span th:text="${sr}" class="sub-admin-3"></span>
+						</a>
+
 						<div class="btn-group pull-right">
 							<button type="button" class="btn btn-theme dropdown-toggle"
 								data-toggle="dropdown">
 								Actions <span class="caret"></span>
 							</button>
-							<ul class="dropdown-menu" role="menu">
+							<ul class="dropdown-menu" role="menu" >
 								<li>
 									<a th:href="@{'/staffadmin/unites-admins/'+${sr.idUniteAdmin}}">
 										<i class="glyphicon glyphicon-eye-open"></i> Voire
 									</a>
 								</li>
 								<li>
-									<a th:href="${'/staffadmin/unites-admins/update/' + sr.idUniteAdmin}">
+									<a th:href="${'/staffadmin/unites-admins/frm/' + sr.idUniteAdmin}">
 										<i class="glyphicon glyphicon-edit"></i> Modifier
 									</a>
 								</li>
 										
 								<li>
-									<a href="#">
-										<i class="glyphicon glyphicon-trash"> Affecter des agents</i>
+									<a th:href="${'/staffadmin/frm-affectations-groupees/' + sr.idUniteAdmin}">
+										<i class="fa fa-users"> Affecter du personnel</i>
 									</a>
 								</li>
 								
 								<li class="divider"></li>
-								<li><a href="#">Separated link</a></li>
 								
 <!-- 												th:href="@{'/pathvars/single/' + ${item.id}}" -->
 									<!-- th:href="@{/pathvars/single/{id}(id = ${item.id})}"   (for single pathVariable)-->
