--- a/src/main/resources/templates/unite-admin/single/list-personnel-frag.html
+++ b/src/main/resources/templates/unite-admin/single/list-personnel-frag.html
@@ -37,7 +37,7 @@
 									<p class="centered"><a th:href="@{/staffadmin/profil(idAgent=${agent.idAgent})}"><img th:title="${agent}" th:src="@{'/staffadmin/agents/'+${agent.idAgent}+'/photo'}" class="img-circle" width="40" height="40"></a></p>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
-									<div class="btn-group">
+									<div class="btn-group pull-right">
 										<button type="button" class="btn btn-theme dropdown-toggle"
 											data-toggle="dropdown">
 											Actions <span class="caret"></span>
@@ -45,24 +45,21 @@
 										<ul class="dropdown-menu" role="menu">
 											<li><a th:href="@{/staffadmin/profil(idAgent=${agent.idAgent})}"><i
 													class="glyphicon glyphicon-eye-open"></i> Voire</a></li>
-											<li><a th:href="@{/staffadmin/profil(idAgent=${agent.idAgent})}"><i class="glyphicon glyphicon-edit"></i>
+											<li><a th:href="@{/staffadmin/frm-agent(idAgent=${agent.idAgent})}"><i class="glyphicon glyphicon-edit"></i>
 													Modifier</a></li>
 													
 											<li>
 												<a th:href="@{'/staffadmin/affectations/'+${agent.idAgent}}">
-													<i class="glyphicon glyphicon-edit"></i> Affecter
+													<i class="glyphicon glyphicon-send"></i> Affecter
 												</a>
 											</li>													
 													
-											<li><a th:href="@{/staffadmin/nominations/form(idAgent=${agent.idAgent})}"><i class="glyphicon glyphicon-trash">
-														Nomination</i></a></li>
+											<li><a th:href="@{/staffadmin/nominations/form(idAgent=${agent.idAgent})}"><i class="fa fa-bullhorn"></i>
+														Nomination</a></li>
 											<li><a href="#"><i class="glyphicon glyphicon-eye"></i>
 													Promotion</a></li>
 											<li class="divider"></li>
-											<li><a href="#">Separated link</a></li>
 											
-<!-- 												th:href="@{'/pathvars/single/' + ${item.id}}" -->
-												<!-- th:href="@{/pathvars/single/{id}(id = ${item.id})}"   (for single pathVariable)-->
 										</ul>
 									</div>
 								</td>                                    
