--- a/src/main/resources/templates/unite-admin/single/summary-card-frag.html
+++ b/src/main/resources/templates/unite-admin/single/summary-card-frag.html
@@ -35,26 +35,32 @@
 				</div>
 				<!-- /col-md-4 -->
 				<div class="col-md-7 profile-text mt mb" style="border: gray; border-left-style: solid; border-right: solid; border-width: thin;" >
-					<ul class="list-unstyled list-group">
-						<li class="list-group-item"> 
-							<b> Encrage institutionnel : </b>
-							<span class="pull-right" th:text="${visitedUniteAdmin.typeUniteAdmin.nomTypeUniteAdmin}"></span>
-						</li>
+					
+					<table class="table table-striped">
+						<tbody>
+							<tr>
+								<th style="width: 300px;">Encrage institutionnel :</th> <th th:text="${visitedUniteAdmin.typeUniteAdmin.nomTypeUniteAdmin}"></th>
+								
+								
+							</tr>
+							<tr>
+								<th>Tutelle : </th>
+								<th> 
+									<a th:href="${visitedUniteAdmin.tutelleDirecte} ? @{'/staffadmin/unites-admins/'+ ${visitedUniteAdmin.tutelleDirecte.idUniteAdmin}} : '#'">
+										<span th:text="${visitedUniteAdmin.tutelleDirecte} ? ${visitedUniteAdmin.tutelleDirecte} : 'Non fourni'"></span>
+									</a>
+								</th>
+							</tr>
+							<tr>
+								<th>Localisation :</th> 
+								<th>
+									<span th:text="${visitedUniteAdmin.situationGeo} ? ${visitedUniteAdmin.situationGeo} : 'Non fourni'"></span>
+									
+								</th>
+							</tr>
+						</tbody>
+					</table>
 
-						<li class="list-group-item"> 
-							<b> Tutelle : </b>
-							<a th:href="${visitedUniteAdmin.tutelleDirecte} ? @{'/staffadmin/unites-admins/'+ ${visitedUniteAdmin.tutelleDirecte.idUniteAdmin}} : '#'">
-								<span class="pull-right" th:text="${visitedUniteAdmin.tutelleDirecte} ? ${visitedUniteAdmin.tutelleDirecte.appellation+ ' (' + visitedUniteAdmin.tutelleDirecte.sigle +')'} : 'Non fourni'"></span>
-							</a>
-						</li>
-						
-						<li class="list-group-item"> 
-							<b> Localisation : </b>
-							<span class="pull-right" th:text="${visitedUniteAdmin.situationGeo} ? ${visitedUniteAdmin.situationGeo} : 'Non fourni'"></span>
-						</li><br/>
-					</ul>
-					
-					
 				</div>
 				<!-- /col-md-4 -->
 				<div class="col-md-2 centered">
@@ -68,16 +74,27 @@
 										<img alt="Photo" th:title="${visitedUniteAdmin.postManager.agent}" th:src="@{'/staffadmin/agents/'+${visitedUniteAdmin.postManager.agent.idAgent}+'/photo'}" class="img-circle"/>
 									</a> <br/>
 									<b th:text="${visitedUniteAdmin.postManager.agent}"></b>
+									
+									
+
+									
+<!-- 									<span th:if="${visitedUniteAdmin.idUniteAdmin==cabinetDGMP.idUniteAdmin}">
+									
+											<a th:href="@{/staffadmin/profil(idAgent=${DGMP.postManager.agent.idAgent})}">
+												<img alt="Photo" th:title="${DGMP.postManager.agent}" th:src="@{'/staffadmin/agents/'+${DGMP.postManager.agent.idAgent}+'/photo'}" class="img-circle"/>
+											</a> <br/>
+											<b th:text="${DGMP.postManager.agent}"></b>
+									</span>	 -->								
 								</p>
 								
-								<span th:if="${#request.userPrincipal.principal.agent.idAgent == visitedUniteAdmin.postManager.agent.idAgent}">
+<!-- 								<span th:if="${#request.userPrincipal.principal.agent.idAgent == visitedUniteAdmin.postManager.agent.idAgent}">
 									<form th:action="@{'/staffadmin/archivage/agents/'+${visitedUniteAdmin.postManager.agent.idAgent}}" method="post" enctype="multipart/form-data">
 										<button class="btn btn-theme"><i class="fa fa-check"></i> Follow</button>
 										<button type="submit" class="btn btn-theme02">Add</button>
 										<input type="hidden" name="typeFile" value="photo"/>
 										<input type="file" name="file"/>
 									</form>
-								</span>
+								</span> -->
 							</span>
 						</span>
 					</div>
@@ -85,9 +102,10 @@
 				</div>
 				<div class="col-md-12" style="align-content: center; align-items: center; text-align: center;">
 					<p>
-						<a th:href="@{'/staffadmin/unites-admins/update/' + ${visitedUniteAdmin.idUniteAdmin}}" class="btn btn-theme" ><i class="fa fa-edit"></i> Modifier</a>
+						<a th:href="@{'/staffadmin/unites-admins/frm/' + ${visitedUniteAdmin.idUniteAdmin}}" class="btn btn-theme" ><i class="fa fa-edit"></i> Modifier</a>
 						<a th:href="@{'/staffadmin/frm-affectations-groupees/' + ${visitedUniteAdmin.idUniteAdmin}}" class="btn btn-theme"><i class="fa fa-users"></i> Affecter du personnel</a>
-						<a th:href="'/staffadmin/' + ${visitedUniteAdmin.idUniteAdmin} + '/nominations/form'" class="btn btn-theme"><i class="fa fa-edit"></i> Nommer un nouveau responsable</a>
+						<a th:disabled="${visitedUniteAdmin.idUniteAdmin==cabinetDGMP.idUniteAdmin}" 
+						   th:href="${visitedUniteAdmin.idUniteAdmin!=cabinetDGMP.idUniteAdmin} ? '/staffadmin/' + ${visitedUniteAdmin.idUniteAdmin} + '/nominations/form' : '#'" class="btn btn-theme"><i class="fa fa-bullhorn"></i> Nommer un nouveau responsable</a>
 					</p>
 				</div>
 				<!-- /col-md-4 -->
